add the html to the whackajawa game

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./HomePage/index.css" />
     <title>Document</title>
   </head>
   <body>
     <div>
       <ul>
         <li><a href="./whatisthis.html">What is this?</a></li>
-        <li><a href="#">Two-Sum</a></li>
-        <li><a href="#">Rock Paper Scissors</a></li>
-        <li><a href="#">Boba and Jango</a></li>
-        <li><a href="#">Random</a></li>
+        <li><a href="#">R2-Sum</a></li>
+        <li><a href="./WhackaJawa/WhackaJawa.html">Whack-a-Jawa</a></li>
+        <li><a href="#">Darth and Yoda</a></li>
         <li>
-          <p>👋</p>
+          <p>
+            <img src="./Images/clipart312883.png" alt="bobafett" />
+          </p>
         </li>
       </ul>
     </div>
