finish javascript and start on css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul>
         <li><a href="./whatisthis.html">What is this?</a></li>
         <li><a href="#">R2-Sum</a></li>
-        <li><a href="./WhackaJawa/WhackaJawa.html">Whack-a-Jawa</a></li>
+        <li><a href="./WhackaWookie/WhackaWookie.html">Whack-a-Wookie</a></li>
         <li><a href="#">Darth and Yoda</a></li>
         <li>
           <p>
