add html and js for the twosum challenge

--- a/WhackaWookie/WhackaWookie.html
+++ b/WhackaWookie/WhackaWookie.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./WhackaWookie.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -13,6 +15,9 @@
         <title>Whack-A-Wookie!</title>
       </head>
       <body>
+        <header>
+          <p>ljdnwlkcnwlkcnlwekcnlwkec</p>
+        </header>
         <main>
           <h1>Whack-a-Wookie!</h1>
           <h1 class="score">0</h1>
