--- a/TwoSum/twosum.html
+++ b/TwoSum/twosum.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./twosum.js" defer></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <img src="./r2d2.png" alt="It is not R2D2 please don't sue me" />
+    <button id="twoSumButton">Find Numbers</button>
+    <p id="valueHere"></p>
+  </body>
 </html>
