--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <ul>
         <li><a href="./whatisthis.html">What is this?</a></li>
-        <li><a href="#">R2-Sum</a></li>
+        <li><a href="./TwoSum/twosum.html">R2-Sum</a></li>
         <li><a href="./WhackaWookie/WhackaWookie.html">Whack-a-Wookie</a></li>
         <li><a href="#">Darth and Yoda</a></li>
         <li>
