--- a/TwoSum/twosum.html
+++ b/TwoSum/twosum.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./twosum.css" rel="stylesheet" />
     <script src="./twosum.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <img src="./r2d2.png" alt="It is not R2D2 please don't sue me" />
-    <button id="twoSumButton">Find Numbers</button>
-    <p id="valueHere"></p>
+    <div class="container">
+      <img
+        src="./r2d2.png"
+        alt="It is not R2D2 please don't sue me"
+        class="r2d2"
+      />
+      <button id="twoSumButton">Find Numbers</button>
+      <p id="valueHere"></p>
+    </div>
   </body>
 </html>
