make sure JS is working for the board

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="./whatisthis.html">What is this?</a></li>
         <li><a href="./TwoSum/twosum.html">R2-Sum</a></li>
         <li><a href="./WhackaWookie/WhackaWookie.html">Whack-a-Wookie</a></li>
-        <li><a href="#">Darth and Yoda</a></li>
+        <li><a href="./DarthandYoda/darthandyoda.html">Darth and Yoda</a></li>
         <li>
           <p>
             <img src="./Images/clipart312883.png" alt="bobafett" />
