--- a/DarthandYoda/darthandyoda.html
+++ b/DarthandYoda/darthandyoda.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./darthandyoda.js"></script>
+    <link href="./darthandyoda.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
