--- a/DarthandYoda/darthandyoda.html
+++ b/DarthandYoda/darthandyoda.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./darthandyoda.js"></script>
     <link href="./darthandyoda.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Tic-Tac-Toe Game</title>
   </head>
   <body>
     <div>
