fix the links, update content for What's this, and the readme

--- a/twosum.html
+++ b/twosum.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./twosum.css" rel="stylesheet" />
-    <script src="./twosum.js" defer></script>
+    <link href="TwoSum/twosum.css" rel="stylesheet" />
+    <script src="TwoSum/twosum.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <img
-        src="./r2d2.png"
+        src="TwoSum/r2d2.png"
         alt="It is not R2D2 please don't sue me"
         class="r2d2"
       />
