--- a/WhackaWookie.html
+++ b/WhackaWookie.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./WhackaWookie.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./WhackaWookie/WhackaWookie.css" />
 
     <title>Document</title>
   </head>
@@ -54,7 +54,7 @@
             </div>
           </div>
         </main>
-        <script src="./WhackaWookie.js"></script>
+        <script src="./WhackaWookie/WhackaWookie.js"></script>
       </body>
     </html>
   </body>
