--- a/darthandyoda.html
+++ b/darthandyoda.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./darthandyoda.js"></script>
-    <link href="./darthandyoda.css" rel="stylesheet" />
+    <script src="./DarthandYoda/darthandyoda.js"></script>
+    <link href="./DarthandYoda/darthandyoda.css" rel="stylesheet" />
     <title>Tic-Tac-Toe Game</title>
   </head>
   <body>
