--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div>
       <ul>
         <li><a href="./whatisthis.html">What is this?</a></li>
-        <li><a href="./TwoSum/twosum.html">R2-Sum</a></li>
-        <li><a href="./WhackaWookie/WhackaWookie.html">Whack-a-Wookie</a></li>
-        <li><a href="./DarthandYoda/darthandyoda.html">Darth and Yoda</a></li>
+        <li><a href="./twosum.html">R2-Sum</a></li>
+        <li><a href="./WhackaWookie.html">Whack-a-Wookie</a></li>
+        <li><a href="./darthandyoda.html">Darth and Yoda</a></li>
         <li>
           <p>
             <img src="./Images/clipart312883.png" alt="bobafett" />
