--- a/twosum.html
+++ b/twosum.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="TwoSum/twosum.css" rel="stylesheet" />
-    <script src="TwoSum/twosum.js" defer></script>
+    <link href="./TwoSum/twosum.css" rel="stylesheet" />
+    <script src="./TwoSum/twosum.js" defer></script>
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <img
-        src="TwoSum/r2d2.png"
-        alt="It is not R2D2 please don't sue me"
-        class="r2d2"
-      />
+    <header>
+      <h2>R2-Sum</h2>
+    </header>
+    <main>
+      <div class="r2d2-container">
+        <img
+          src="./TwoSum/r2d2.png"
+          alt="It is not R2D2 please don't sue me"
+          class="r2d2"
+        />
+      </div>
       <button id="twoSumButton">Find Numbers</button>
       <p id="valueHere"></p>
-    </div>
+    </main>
   </body>
 </html>
