show all possible ways of making the number

--- a/twosum.html
+++ b/twosum.html
@@ -22,5 +22,8 @@
       <button id="twoSumButton">Find Numbers</button>
       <p id="valueHere"></p>
     </main>
+    <footer>
+      <p>Please do not sue me Disney this is all just for fun!</p>
+    </footer>
   </body>
 </html>
