final additions for now - links working general tidy up of pages 1 2 and 3

--- a/WhackaWookie.html
+++ b/WhackaWookie.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./WhackaWookie/WhackaWookie.css" />
 
     <title>Document</title>
@@ -16,10 +15,14 @@
       </head>
       <body>
         <header>
-          <p>ljdnwlkcnwlkcnlwekcnlwkec</p>
+          <h2>Whack-A-Wookie</h2>
+          <nav>
+            <a href="whatisthis.html">What is this?</a>
+            <a href="twosum.html">R2-Sum</a>
+            <a href="darthandyoda.html">Darth and Yoda</a>
+          </nav>
         </header>
         <main>
-          <h1>Whack-a-Wookie!</h1>
           <h1 class="score">0</h1>
           <div class="start">
             <button onClick="startGame()">Start!</button>
@@ -54,6 +57,7 @@
             </div>
           </div>
         </main>
+        <footer>Please do not sue me Disney this is all for fun!</footer>
         <script src="./WhackaWookie/WhackaWookie.js"></script>
       </body>
     </html>
