--- a/twosum.html
+++ b/twosum.html
@@ -10,6 +10,11 @@
   <body>
     <header>
       <h2>R2-Sum</h2>
+      <nav>
+        <button><a href="whatisthis.html">What is this?</a></button>
+        <button><a href="WhackaWookie.html">Whack-a-Wookie</a></button>
+        <button><a href="darthandyoda.html">Darth and Yoda</a></button>
+      </nav>
     </header>
     <main>
       <div class="r2d2-container">
