--- a/whatisthis.html
+++ b/whatisthis.html
@@ -23,18 +23,19 @@
       This page is going to be a record of what stage I have managed to get to!
       As well as highlighting any issues I might have any getting me across the
       line with each challenge. If you wish to go back to the home page then
-      please click HERE. (GET LINKS TO WORK 18.10.23)
+      please click <a href="index.html">HERE.</a> 
     </p>
 
     <h4><a href="twosum.html">R2-Sum</a></h4>
     <p>
       A simple bit of JavaScript magic! Type in a number when prompted and the
       compute mega brain will be able to choose two numbers from the array that
-      will add up to the number you want.  This is now at the MVP stage but some changes I am looking to make as of 18.10.23 are 
+      will add up to the number you want.  This is now at the MVP stage but some changes I am looking to make as of 21.10.23 are 
       <ul>
         <li> Adjust the CSS to make the page more uniform with the rest of the site</li>
-        <li> Have an animation on the page of R2 rolling across the bottom of the page</li>
-        <li> Move the button to the dead centre of the page </li>
+        <li> Look into the R2 animation sometimes goes "off the page"</li>
+        <li> R2 Noise while he rolls across the board</li>
+        <li> Look into why the number array does not select the same number twice i.e. pick 26 and get 13+13</li>
       </ul>
     </p>
 
@@ -42,7 +43,7 @@
     <p>A classic fairground game with a Star Wars twist!</p>
 
     <p>
-      The game is working at MVP!  It is just at the stage now where I need to make the game look nice and pretty. Things I will be looking to change as of 18.10.23
+      The game is working at MVP!  It is just at the stage now where I need to make the game look nice and pretty. Things I will be looking to change as of 21.10.23
       <ul>
         <li> Resize the wookie heads to make them fit the game board a bit better</li>
         <li> Adjust the CSS to make the page more uniform with the rest of the site</li>
@@ -55,7 +56,7 @@
     <h4><a href="darthandyoda.html">Darth and Yoda</a></h4>
     <p>Tic-Tac-Toe with (you guessed it) a Star Wars twist!</p>
 
-    <p> The game is working at MVP! Similar to Whack-a-Wookie I just need to make the game look a bit presentable and add some stretch goals (18.03.23)
+    <p> The game is working at MVP! Similar to Whack-a-Wookie I just need to make the game look a bit presentable and add some stretch goals (21.03.23)
       <ul>
         <li> Adjust the CSS to make it more uniform to the rest of the page </li>
         <li> Replace o's and x's with an image of Darth Vader and Yoda </li>
